Bug 25431 - [i915 bisected] piglit/texturing_tfp regressed
Summary: [i915 bisected] piglit/texturing_tfp regressed
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-03 18:04 UTC by Shuang He
Modified: 2009-12-07 17:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Shuang He 2009-12-03 18:04:53 UTC
System Environment:
--------------------------
Kernel  (drm-intel-next)d09c23de9f967a7b7dcee0ffc57222ddbd821aba
Mesa    (master)cdb6849fc1fa0c6e360c89a6388dc8bf19a746ca
Libdrm  (master)8ffd2e142e38d19326a40ff66dc99d052ce22100
Xserver         (master)98c8b752254a27ab1aaf881b36bfda0f74929d0a
Xf86_video_intel        (master)c439207ec0cc16d7d9f523598fcdebf7cec893e2

Bug detailed description:
-------------------------
This issue happens on both 945GM and 945GME.
piglit case texturing_tfp regressed.
which is due to following commit:
commit 98e11210367c950e3f932419d2a4722cf971885d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Dec 2 20:48:37 2009 +0000

    Remove flush parameter from intel_batch_flush()
    
    There is only a single caller that wishes to forcibly append a flush
    into the batch: intel_sync(). So move the logic there.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 1 Chris Wilson 2009-12-07 03:17:34 UTC
commit cd475bad23c02130d11c49882c11261c9f0d4ef1
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Dec 7 11:09:14 2009 +0000

    batch: Ensure we send a MI_FLUSH in the block handler for TFP
    
    This should restore the previous level of synchronisation between
    textures and pixmaps, but *does not* guarantee that a texture will be
    flushed before use. tfp should be fixed so that the ddx can submit the
    batch if required to flush the pixmap.
    
    A side-effect of this patch is to rename intel_batch_flush() to
    intel_batch_submit() to reduce the confusion of executing a batch buffer
    with that of emitting a MI_FLUSH.
    
    Should fix the remaining rendering corruption involving tfp [inc compiz]:
    
      Bug 25431 [i915 bisected] piglit/texturing_tfp regressed
      http://bugs.freedesktop.org/show_bug.cgi?id=25431
    
      Bug 25481 Wrong cursor format and cursor blink rate with compiz enabled
      http://bugs.freedesktop.org/show_bug.cgi?id=25481
Comment 2 Shuang He 2009-12-07 17:40:54 UTC
verified on 945GM against:
Kernel 	(drm-intel-next)d09c23de9f967a7b7dcee0ffc57222ddbd821aba
Libdrm 	(master)83a35b68f45cebc70152e55ed3f99db485c9a7cd
Mesa 	(master)12981589b729de0242d6ea74d8e4e9889793088c
Xserver 	(master)fd867387335b6175d76bbe93118bbe5e1e45ce88
Xf86_video_intel 	(master)415aab474edd1425034981306718afd8506445f1


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.